Fixed toolbar alignment

--- a/common/components/Wrap/wrap.module.css
+++ b/common/components/Wrap/wrap.module.css
@@ -1,7 +1,6 @@
 .container {
 	position: relative;
 	flex-grow: 1;
-	width: 100%;
 	display: grid;
 }
 
